# smolql

./: .gitignore  README.md  makefile  pyproject.toml
src/smolql/: __init__.py  api.py  operators.py
src/smolql/domain/: __init__.py  entities.py  interfaces.py  value_objects.py
src/smolql/services/: __init__.py  compiler_service.py  postgres_visitor.py  sqlite_visitor.py
tests/: __init__.py  test_basic_queries.py  test_dialects.py  test_group_by.py  test_intended_experience.py  test_joins.py  test_operators.py  test_raw_sql.py
